Big changes to make things both run better and to organize code