@@ -1,6 +1,9 @@
 package CS2420_Semester_Project;
 
 // For player constants
+import CS2420_Semester_Project.subclasses.Location;
+import CS2420_Semester_Project.subclasses.PersonState;
+
 import static CS2420_Semester_Project.Person.*;
 import static CS2420_Semester_Project.PlaneGui.*;
 import java.awt.Color;
@@ -19,6 +22,10 @@ import java.util.List;
 import javax.swing.JLabel;
 import javax.swing.JPanel;
 
+/**
+ * @author Cory
+ * @author Pizza2d1
+ */
 public class CS2420_Semester_Project {
 
 	// Testing variables
@@ -45,7 +52,7 @@ public class CS2420_Semester_Project {
 	static boolean paused = false;
 	static int ticks = 0;
 	static Display_Clock display_clock = Display_Clock.STOPPED;
-	static List<Integer> queue = new ArrayList<>();
+//	static List<Integer> queue = new ArrayList<>();
 
 	public static void main(String[] args) {
 
@@ -54,7 +61,7 @@ public class CS2420_Semester_Project {
 		// Starts up the gui and keybinds
 		EventQueue.invokeLater(() -> {
 			try {
-				PlaneGui frame = new PlaneGui(peopleArr, planeDisplay, contentPane); // Can prob make this section shorter, but whatever
+				PlaneGui frame = new PlaneGui(planeDisplay, contentPane); // Can prob make this section shorter, but whatever
 				frame.setVisible(true);
 				frame.addKeyListener(new KeyAdapter() {
           			@Override
@@ -62,10 +69,10 @@ public class CS2420_Semester_Project {
 						int keyCode = e.getKeyCode();
 						try { // Two try/catch statements? Ewwww
 							action(keyCode);
-						} catch (IOException err) {}
+						} catch (IOException _) {}
 					}
 				});
-			} catch (Exception err2) {}
+			} catch (Exception _) {}
 		});
 
 		// Create people array so that they can be sorted
@@ -117,7 +124,7 @@ public class CS2420_Semester_Project {
 		personSprite.setBackground(red);
 		personSprite.setLocation(PERSON_SPAWN_X, PERSON_SPAWN_Y);
 		personSprite.setSize(PERSON_WIDTH, PERSON_HEIGHT);
-		Person test = new Person(seatingNumber, false, personSprite, new Location(PERSON_SPAWN_X, PERSON_SPAWN_Y), new ArrayList<>(), State.MOVING);
+		Person test = new Person(seatingNumber, false, personSprite, new Location(PERSON_SPAWN_X, PERSON_SPAWN_Y), new ArrayList<>(), PersonState.MOVING);
 		peopleArr.add(test);
 		contentPane.add(test.personSprite);
 	}
@@ -282,7 +289,7 @@ public class CS2420_Semester_Project {
 
 	public static boolean checkIfSeated(Person person) {
 		if (person.location.equals(person.seatLocation)) {
-			person.state = State.SEATED;
+			person.state = PersonState.SEATED;
 			return true;
 		}
 		return false;
@@ -290,13 +297,13 @@ public class CS2420_Semester_Project {
 
 	public static boolean checkIfAllSeated() {
 		for (Person person : peopleArr) {
-			if (person.state != State.SEATED) {
+			if (person.state != PersonState.SEATED) {
 				return false;
 			} else {
-				continue;
-			}
+				break;
+            }
 		}
-//		paused = true;
+		if (!load_complete) paused = true;
 		load_complete = true;
 		return true;
 	}
@@ -320,37 +327,45 @@ public class CS2420_Semester_Project {
 				}
 				break;
 			case KeyEvent.VK_W:
-				for (int i = 0; i < peopleArr.size(); i++) {
-					peopleArr.get(i).moveY(-PERSON_STEP_Y);
+				for (Person person : peopleArr) {
+					person.moveY(-PERSON_STEP_Y);
 				}
 				break;
 			case KeyEvent.VK_A:
-				for (int i = 0; i < peopleArr.size(); i++) {
-					peopleArr.get(i).moveX(-PERSON_STEP_X);
+				for (Person person : peopleArr) {
+					person.moveX(-PERSON_STEP_X);
 				}
 				break;
 			case KeyEvent.VK_S:
-				for (int i = 0; i < peopleArr.size(); i++) {
-					peopleArr.get(i).moveY(PERSON_STEP_Y);
+				for (Person person : peopleArr) {
+					person.moveY(PERSON_STEP_Y);
 				}
 				break;
 			case KeyEvent.VK_D:
-				for (int i = 0; i < peopleArr.size(); i++) {
-					peopleArr.get(i).moveX(PERSON_STEP_X);
+				for (Person person : peopleArr) {
+					person.moveX(PERSON_STEP_X);
 				}
 				break;
 
 			case KeyEvent.VK_COMMA:
-				clockSpeed-=100;
+				if (clockSpeed <= 100) {
+					clockSpeed = 50;
+				} else {
+					clockSpeed-=100;
+				}
 				break;
 			case KeyEvent.VK_PERIOD:
-				clockSpeed+=100;
+				if (clockSpeed == 50) {
+					clockSpeed = 100;
+				} else {
+					clockSpeed+=100;
+				}
 				break;
 
 			case KeyEvent.VK_K:
 				allow_queuing();
-				queueMovementToLocation(peopleArr.get(0), new Location(PLANE_GRID_1_X, PLANE_GRID_1_Y-PERSON_STEP_Y));
-				queueMovementToLocation(peopleArr.get(0), new Location(PLANE_GRID_2_X, PLANE_GRID_2_Y-PERSON_STEP_Y));
+				queueMovementToLocation(peopleArr.getFirst(), new Location(PLANE_GRID_1_X, PLANE_GRID_1_Y-PERSON_STEP_Y));
+				queueMovementToLocation(peopleArr.getFirst(), new Location(PLANE_GRID_2_X, PLANE_GRID_2_Y-PERSON_STEP_Y));
 				break;
 			case KeyEvent.VK_J:
 				allow_queuing();
@@ -368,7 +383,7 @@ public class CS2420_Semester_Project {
 				moveAllToLocation(new Location(PLANE_GRID_2_X+PERSON_STEP_X*3, PLANE_GRID_2_Y-PERSON_STEP_Y));
 				break;
 			case KeyEvent.VK_P:
-				paused = (paused) ? false : true;
+				paused = !paused;
 				break;
 			case KeyEvent.VK_Y:
 				moveAllToSeats(peopleArr);
@@ -382,7 +397,7 @@ public class CS2420_Semester_Project {
 				moveAllToSeats(peopleArr);
 				break;
 			case KeyEvent.VK_3:
-				unloading = (unloading) ? false : true;
+				unloading = !unloading;
 				paused = false;
 				break;
 			case KeyEvent.VK_4:
@@ -479,7 +494,7 @@ public class CS2420_Semester_Project {
 			boolean second_line_checker = false;
 			while ((line = reader.readLine()) != null) {
 				if (second_line_checker) addToArr(result, line);
-				second_line_checker = (second_line_checker) ? false : true;
+				second_line_checker = !second_line_checker;
 			}
 		} catch (IOException e) {
 			System.out.println("Config file not found in src/CS2420_Semester_Project directory");
